--- a/TileLinkTrafficGenerator-F446/Debug/makefile
+++ b/TileLinkTrafficGenerator-F446/Debug/makefile
@@ -60,8 +60,8 @@ all: main-build
 main-build: TileLinkTrafficGenerator-F446.elf secondary-outputs
 
 # Tool invocations
-TileLinkTrafficGenerator-F446.elf TileLinkTrafficGenerator-F446.map: $(OBJS) $(USER_OBJS) C:\Users\TK\Desktop\TileLinkTrafficGenerator-F446\STM32F446RETX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "TileLinkTrafficGenerator-F446.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\TK\Desktop\TileLinkTrafficGenerator-F446\STM32F446RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="TileLinkTrafficGenerator-F446.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+TileLinkTrafficGenerator-F446.elf TileLinkTrafficGenerator-F446.map: $(OBJS) $(USER_OBJS) C:\Users\TK\Desktop\BWRC-ChipUtil-TileLinkTrafficGenerator\TileLinkTrafficGenerator-F446\STM32F446RETX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "TileLinkTrafficGenerator-F446.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\TK\Desktop\BWRC-ChipUtil-TileLinkTrafficGenerator\TileLinkTrafficGenerator-F446\STM32F446RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="TileLinkTrafficGenerator-F446.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
