--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -1,106 +1,132 @@
-# Path you your toolchain installation, leave empty if already in system PATH
-TOOLCHAIN_ROOT =
 
-# Path to the MCU codebase
-VENDOR_ROOT = ./bsp/
+TARGET ?= firmware
 
-###############################################################################
 
-# Project specific
-TARGET = firmware.elf
-SRC_DIR = src/
-INC_DIR = inc/
-
-# Toolchain
+#################################
+# RISCV SiFive Toolchain
+#################################
 CC = riscv64-unknown-elf-gcc
+CXX = riscv64-unknown-elf-g++
+CP = riscv64-unknown-elf-objcopy
+OD = riscv64-unknown-elf-objdump
 DG = riscv64-unknown-elf-gdb
+SIZE = riscv64-unknown-elf-size
+
+
+#################################
+# Working directories
+#################################
+VENDOR_ROOT = bsp/
+SRC_DIR = core/src/
+INC_DIR = core/inc/
+BUILD_DIR = build/
+
+
+#################################
+# Source Files
+#################################
+A_SOURCES  = $(wildcard $(SRC_DIR)*.S) $(wildcard $(SRC_DIR)*/*.S)
+
+C_SOURCES  = $(wildcard $(SRC_DIR)*.c) $(wildcard $(SRC_DIR)*/*.c)
+C_SOURCES += $(VENDOR_ROOT)oscibear/src/oscibear_hal.c
+C_SOURCES += $(VENDOR_ROOT)oscibear/src/oscibear_hal_uart.c
+
+INCLUDES  = -I$(INC_DIR)
+INCLUDES += -I$(INC_DIR)hal/
+INCLUDES += -I$(VENDOR_ROOT)oscibear/inc
+
+
+#################################
+# Object List
+#################################
+A_OBJECTS = $(addsuffix .o,$(addprefix $(BUILD_DIR),$(basename $(A_SOURCES))))
+C_OBJECTS = $(addsuffix .o,$(addprefix $(BUILD_DIR),$(basename $(C_SOURCES))))
+
+OBJECTS = $(A_OBJECTS) $(C_OBJECTS)
+
+#################################
+# Target Output Files
+#################################
+TARGET_ELF = $(BUILD_DIR)$(TARGET).elf
+TARGET_BIN = $(BUILD_DIR)$(TARGET).bin
+TARGET_HEX = $(BUILD_DIR)$(TARGET).hex
+TARGET_VERILOG = $(BUILD_DIR)$(TARGET).out
+
+
+#################################
+# Flags
+#################################
 
 # MCU Settings
-#ARCH = rv32imac    rv32imafc
 ARCH = rv32i
 ABI = ilp32
 CODEMODEL = medany
-LD_SCRIPT = $(SRC_DIR)/oscibear.ld
+LD_SCRIPT = $(SRC_DIR)oscibear.ld
 
 ARCHFLAGS = -march=$(ARCH) -mabi=$(ABI) -mcmodel=$(CODEMODEL) -fno-pie
 SPECFLAGS = --specs="nano.specs"
 
-# Compiler Flags
+# compiler Flags
 CFLAGS  = -g -std=gnu11 -O0 -Wall -Wextra -Warray-bounds -Wno-unused-parameter
 CFLAGS += -fno-common -fno-builtin-printf
 CFLAGS += $(ARCHFLAGS)
 CFLAGS += $(SPECFLAGS)
 CFLAGS += $(INCLUDES)
 
-# Linker Flags
+# linker Flags
 LFLAGS  = -static
 LFLAGS += -nostartfiles -nostdlib
 LFLAGS += -T $(LD_SCRIPT)
 
-# Project sources
-SRC_FILES = $(wildcard $(SRC_DIR)*.c) $(wildcard $(SRC_DIR)*/*.c)
-ASM_FILES = $(wildcard $(SRC_DIR)*.s) $(wildcard $(SRC_DIR)*/*.s)
 
-# Project includes
-INCLUDES   = -I$(INC_DIR)
-INCLUDES  += -I$(INC_DIR)hal/
+#################################
+# Build
+#################################
 
+# default target
+all: $(TARGET_ELF)
 
-# Vendor sources: Note that files in "Templates" are normally copied into project for customization,
-# but that is not necessary for this simple project.
-# ASM_FILES += $(VENDOR_ROOT)Drivers/CMSIS/Device/ST/STM32F7xx/Source/Templates/gcc/startup_stm32f767xx.s
-# SRC_FILES += $(VENDOR_ROOT)Drivers/CMSIS/Device/ST/STM32F7xx/Source/Templates/system_stm32f7xx.c
-# SRC_FILES += $(VENDOR_ROOT)Drivers/BSP/STM32F7xx_Nucleo_144/stm32f7xx_nucleo_144.c
-# SRC_FILES += $(VENDOR_ROOT)Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal.c
-# SRC_FILES += $(VENDOR_ROOT)Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_cortex.c
-# SRC_FILES += $(VENDOR_ROOT)Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_dma.c
-# SRC_FILES += $(VENDOR_ROOT)Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_exti.c
-# SRC_FILES += $(VENDOR_ROOT)Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_flash.c
-# SRC_FILES += $(VENDOR_ROOT)Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_gpio.c
-# SRC_FILES += $(VENDOR_ROOT)Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_pwr.c
-# SRC_FILES += $(VENDOR_ROOT)Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_pwr_ex.c
-# SRC_FILES += $(VENDOR_ROOT)Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_rcc.c
-# SRC_FILES += $(VENDOR_ROOT)Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_rcc_ex.c
-# SRC_FILES += $(VENDOR_ROOT)Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_uart.c
+$(TARGET_BIN): $(TARGET_ELF)
+	$(CP) -O binary $< $@
 
+$(TARGET_HEX): $(TARGET_ELF)
+	$(CP) -O ihex $< $@
 
-# Vendor includes
-INCLUDES += -I$(VENDOR_ROOT)Drivers/CMSIS/Core/Include
-INCLUDES += -I$(VENDOR_ROOT)Drivers/CMSIS/Device/ST/STM32F7xx/Include
-INCLUDES += -I$(VENDOR_ROOT)Drivers/STM32F7xx_HAL_Driver/Inc
-INCLUDES += -I$(VENDOR_ROOT)Drivers/BSP/STM32F7xx_Nucleo_144
+$(TARGET_VERILOG): $(TARGET_ELF)
+	$(CP) -O verilog $< $@
 
+$(TARGET_ELF): $(OBJECTS)
+	@echo "[LD] linking $@"
+	@$(CC) $(CFLAGS) $(LFLAGS) $^ -o $@
+	$(SIZE) $(TARGET_ELF)
 
-###############################################################################
-
-CXX_OBJS = $(SRC_FILES:.c=.o)
-ASM_OBJS = $(ASM_FILES:.s=.o)
-ALL_OBJS = $(ASM_OBJS) $(CXX_OBJS)
-
-all: $(TARGET)
-
-# Compile
-$(CXX_OBJS): %.o: %.c
-$(ASM_OBJS): %.o: %.s
-$(ALL_OBJS):
-	@echo "[CC] $@"
+$(A_OBJECTS): $(BUILD_DIR)%.o: %.S
+	@echo "[CC] compiling $@"
+	@mkdir -p $(@D)
 	@$(CC) $(CFLAGS) -c $< -o $@
 
-# Link
-%.elf: $(ALL_OBJS)
-	@echo "[LD] $@"
-	@$(CC) $(CFLAGS) $(LFLAGS) $(ALL_OBJS) -o $@
+$(C_OBJECTS): $(BUILD_DIR)%.o: %.c
+	@echo "[CC] compiling $@"
+	@mkdir -p $(@D)
+	@$(CC) $(CFLAGS) -c $< -o $@
 
-# Clean
+
+#################################
+# Recipes
+#################################
+
 clean:
-	@rm -f $(ALL_OBJS) $(TARGET)
+	@rm -rf $(BUILD_DIR)
 
-# Debug
-gdb-server_rvlink:
-	rv-util
+bin: $(TARGET_BIN)
 
-gdb-server_openocd:
-	openocd -f ./openocd.cfg
+hex: $(TARGET_HEX)
 
-gdb-client: $(TARGET)
-	$(DB) -tui $(TARGET)
+verilog: $(TARGET_VERILOG)
+
+# for debugging Makefile
+list:
+	@echo "A_SOURCES: $(A_SOURCES)"
+	@echo "C_SOURCES: $(C_SOURCES)"
+	@echo "A_OBJECTS: $(A_OBJECTS)"
+	@echo "C_OBJECTS: $(C_OBJECTS)"
